--- a/index.html
+++ b/index.html
@@ -1,7 +1,71 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <title>我的个人网站</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        nav {
+            background-color: #333;
+            color: white;
+            padding: 1em;
+        }
+
+        nav a {
+            color: white;
+            margin: 0 1em;
+            text-decoration: none;
+        }
+
+        section {
+            margin: 2em 0;
+        }
+
+        .resume-button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin-top: 20px;
+            background-color: #4CAF50;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <nav>
+        <a href="#about">关于我</a>
+        <a href="#projects">项目</a>
+        <a href="#contact">联系我</a>
+        <!-- 添加CV按钮 -->
+        <a href="path/to/your/resume.pdf" target="_blank">CV</a>
+    </nav>
+    <section id="about">
+        <h2>关于我</h2>
+        <p>你好，我是 [你的名字]，欢迎来到我的个人网站！我是一名 [你的职业或爱好]，喜欢 [你的兴趣或特长]。</p>
+    </section>
+    <section id="projects">
+        <h2>项目</h2>
+        <p>这里是我参与的一些项目：</p>
+        <ul>
+            <li>项目1</li>
+            <li>项目2</li>
+            <li>项目3</li>
+        </ul>
+    </section>
+    <section id="contact">
+        <h2>联系我</h2>
+        <p>你可以通过以下方式联系我：</p>
+        <ul>
+            <li>Email: [你的邮箱]</li>
+            <li>LinkedIn: [你的LinkedIn链接]</li>
+            <li>GitHub: [你的GitHub链接]</li>
+        </ul>
+    </section>
 </body>
+
 </html>
